<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".BMIActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbBMi"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rgUnits"
        android:layout_margin="10dp"
        android:visibility="visible"
        app:boxStrokeColor="@color/color_accent"
        app:hintTextColor="@color/color_accent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weight_in_kg"
            android:inputType="numberDecimal"
            android:textSize="16sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tiWeight"
        android:layout_margin="10dp"
        app:boxStrokeColor="@color/color_accent"
        app:hintTextColor="@color/color_accent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/height_in_cm"
            android:inputType="numberDecimal"
            android:textSize="16sp"/>

    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:id="@+id/llMetric"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tiHeight"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        android:visibility="invisible"
        tools:visibility="visible">

        <TextView
            android:id="@+id/tvYourBMI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_bmi"
            android:textColor="#1E1E1E"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvBMIValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/_00"
            android:textSize="19sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvBMIType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/normal"
            android:textSize="19sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tvBMIDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/description"
            android:textSize="19sp"
            android:textStyle="italic" />
    </LinearLayout>

    <Button
        android:id="@+id/btnCalc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llMetric"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/color_accent"
        android:text="@string/calculate" />

    <RadioGroup
        android:id="@+id/rgUnits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tbBMi"
        android:layout_margin="10dp"
        android:background="@drawable/radio_group_tab_bg"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbMetricUnit"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:button="@null"
            android:background="@drawable/units_tab_selector"
            android:text="@string/metric_unit"
            android:checked="true"
            android:gravity="center"
            android:textColor="@drawable/units_tab_text_color_selector"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <RadioButton
            android:id="@+id/rbUSUnit"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="@drawable/units_tab_selector"
            android:button="@null"
            android:checked="false"
            android:gravity="center"
            android:text="@string/us_unit"
            android:textColor="@drawable/units_tab_text_color_selector"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />

    </RadioGroup>

<!--US elements-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiUSWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rgUnits"
        android:layout_margin="10dp"
        android:visibility="invisible"
        app:boxStrokeColor="@color/color_accent"
        app:hintTextColor="@color/color_accent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etUSWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weight_in_pounds"
            android:inputType="numberDecimal"
            android:textSize="16sp"
             />
    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:id="@+id/llUSHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tiUSWeight"
        android:layout_margin="10dp"
        android:visibility="invisible"
        tools:visibility="invisible"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiUSHeightInches"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingEnd="5dp"
            android:layout_weight="1"
            app:boxStrokeColor="@color/color_accent"
            app:hintTextColor="@color/color_accent">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etUSInches"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/inches"
                android:inputType="numberDecimal"
                android:textSize="16sp"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiUSHeightFeet"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="5dp"
            app:boxStrokeColor="@color/color_accent"
            app:hintTextColor="@color/color_accent">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etUSFeet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/feet"
                android:inputType="numberDecimal"
                android:textSize="16sp"/>

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>


</RelativeLayout>