<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/exercise_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        android:theme="@style/ToolbarTheme"
        android:background="@color/white"
        app:titleTextColor="@color/color_primary"/>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_ready_for"
        android:textSize="22sp"
        android:textColor="@color/color_accent"
        android:textStyle="bold"
        android:layout_margin="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/fl_rest_view"
        />

    <!--Rest FrameLayout-->
    <FrameLayout
        android:id="@+id/fl_rest_view"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/item_circular_color_accent_border"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/exercise_toolbar">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            style="?android:attr/progressBarStyleHorizontal"
            android:background="@drawable/circular_progress_bar_gray"
            android:progressDrawable="@drawable/circular_progress_bar"
            android:indeterminate="false"
            android:layout_gravity="center"
            android:max="10"
            android:progress="100"
            android:rotation="-90"/>

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/item_circular_color_item_accent_background"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="22sp"
                tools:text="10"/>
        </LinearLayout>

    </FrameLayout>

    <TextView
        android:id="@+id/tv_upcoming"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upcoming_exercise"
        android:textSize="22sp"
        android:textColor="@color/color_accent"
        android:textStyle="bold"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_next_exercise"
        app:layout_constraintTop_toBottomOf="@id/fl_rest_view"
        />

    <TextView
        android:id="@+id/tv_next_exercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercise_name"
        android:textSize="@dimen/default_textSize"
        android:textColor="@color/color_primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_upcoming"/>



    <!--Exercise image-->
    <ImageView
        android:id="@+id/exercise_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_jumping_jacks"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/tv_exercise_name"
        app:layout_constraintTop_toBottomOf="@+id/exercise_toolbar"

        />

    <TextView
        android:id="@+id/tv_exercise_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/color_accent"
        android:textStyle="bold"
        android:textSize="22sp"
        android:text="@string/exercise_name"
        tools:visibility="visible"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/exercise_image"

        />

    <!--Exercise FrameLayout-->
    <FrameLayout
        android:id="@+id/fl_exercise_view"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:background="@drawable/item_circular_color_accent_border"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_exercise_name">

        <ProgressBar
            android:id="@+id/exercise_progress_bar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            style="?android:attr/progressBarStyleHorizontal"
            android:background="@drawable/circular_progress_bar_gray"
            android:progressDrawable="@drawable/circular_progress_bar"
            android:indeterminate="false"
            android:layout_gravity="center"
            android:max="30"
            android:progress="300"
            android:rotation="-90"/>

        <LinearLayout
            android:layout_width="67dp"
            android:layout_height="67dp"
            android:layout_gravity="center"
            android:background="@drawable/item_circular_color_item_accent_background"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_timer_exercise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                tools:text="30" />

        </LinearLayout>

    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvExerciseStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:visibility="visible"
        tools:listitem="@layout/item_exercise_status"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fl_exercise_view"/>


</androidx.constraintlayout.widget.ConstraintLayout>